# qrelay

./: AGENTS.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
example/: qrelay-ssh.service
src/: buffer.rs  cli.rs  client.rs  common.rs  error.rs  lib.rs  main.rs  nc.rs  protocol.rs  server.rs  session.rs  tls.rs
tests/: e2e_test.rs
